--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,6 +10,7 @@
   <link rel="stylesheet" href="style.css" />
   <title>Home</title>
 </head>
+
 <body>
   <!--HEADER-->
   <nav class="navbar navbar-expand-lg fixed-top navbar-light border-bottom border-1">
@@ -96,8 +98,10 @@
             <a class="nav-link" href="#">Others</a>
           </li>
           <li>
-              <button class="btn btn-outline-danger ms-2" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+            <button class="btn btn-outline-danger ms-2" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                <path
+                  d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
               </svg></button>
           </li>
         </ul>
@@ -381,8 +385,8 @@
           </div>
         </div>
         <div class="col-lg-3">
-          <a href="#"><img src="img/top-ad.jpg" alt="Ad" class="img-fluid"></a>
-          <a href="#"><img src="img/ad-2.jpg" alt="ad" class=" img-fluid mt-1"></a>
+          <a href="#"><img src="img/top-ad.jpg" class="img-fluid"></a>
+          <a href="#"><img src="img/ad-2.jpg" class=" img-fluid mt-1"></a>
           <div class=" mt-3">
             <!-- Nav tabs -->
             <ul class="nav nav-tabs" role="tablist">
