--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
   <section class="my-5">
     <div class="container">
       <div class="row">
-        <div class="col-4">
+        <div class="col-md-4">
           <h3 class="bg-dark text-white text-center">Politics</h3>
           <div class="text-on-top mb-4">
             <a class="news-link" href="#"><img src="img/sheikh-hasina-parliament.jpg" class="img-fluid">
