--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
   <section class="my-5">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12-md-12-lg-4">
+        <div class="col-lg-4">
           <h3 class="bg-dark text-white text-center">Politics</h3>
           <div class="text-on-top mb-4">
             <a class="news-link" href="#"><img src="img/sheikh-hasina-parliament.jpg" class="img-fluid">
@@ -687,7 +687,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12-md-12-lg-4">
+        <div class="col-lg-4">
           <h3 class="bg-dark text-white text-center">Politics</h3>
           <div class="text-on-top mb-4">
             <a class="news-link" href="#"><img src="img/sheikh-hasina-parliament.jpg" class="img-fluid">
@@ -728,7 +728,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12-md-12-lg-4">
+        <div class="col-lg-4">
           <h3 class="bg-dark text-white text-center">Politics</h3>
           <div class="text-on-top mb-4">
             <a class="news-link" href="#"><img src="img/sheikh-hasina-parliament.jpg" class="img-fluid">
