--- a/index.html
+++ b/index.html
@@ -643,11 +643,11 @@
     </div>
   </div>
   <!--section-3-->
-  <section class="my-5">
+  <section>
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
-          <h3 class="bg-dark text-white text-center">Politics</h3>
+          <h3 class="bg-dark text-white text-center mt-5">Politics</h3>
           <div class="text-on-top mb-4">
             <a class="news-link" href="#"><img src="img/sheikh-hasina-parliament.jpg" class="img-fluid">
               <div class="bottom-left mb-0 p-3 w-100">
@@ -688,7 +688,7 @@
           </div>
         </div>
         <div class="col-lg-4">
-          <h3 class="bg-dark text-white text-center">Politics</h3>
+          <h3 class="bg-dark text-white text-center mt-5">Politics</h3>
           <div class="text-on-top mb-4">
             <a class="news-link" href="#"><img src="img/sheikh-hasina-parliament.jpg" class="img-fluid">
               <div class="bottom-left mb-0 p-3 w-100">
@@ -729,7 +729,7 @@
           </div>
         </div>
         <div class="col-lg-4">
-          <h3 class="bg-dark text-white text-center">Politics</h3>
+          <h3 class="bg-dark text-white text-center mt-5">Politics</h3>
           <div class="text-on-top mb-4">
             <a class="news-link" href="#"><img src="img/sheikh-hasina-parliament.jpg" class="img-fluid">
               <div class="bottom-left mb-0 p-3 w-100">
@@ -773,11 +773,11 @@
     </div>
   </section>
   <!--section-4-->
-  <section class="my-5">
+  <section>
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
-          <h3 class="bg-dark text-white text-center">Politics</h3>
+          <h3 class="bg-dark text-white text-center mt-5">Politics</h3>
           <div class="text-on-top mb-4">
             <a class="news-link" href="#"><img src="img/sheikh-hasina-parliament.jpg" class="img-fluid">
               <div class="bottom-left mb-0 p-3 w-100">
@@ -818,7 +818,7 @@
           </div>
         </div>
         <div class="col-lg-4">
-          <h3 class="bg-dark text-white text-center">Politics</h3>
+          <h3 class="bg-dark text-white text-center mt-5">Politics</h3>
           <div class="text-on-top mb-4">
             <a class="news-link" href="#"><img src="img/sheikh-hasina-parliament.jpg" class="img-fluid">
               <div class="bottom-left mb-0 p-3 w-100">
@@ -859,7 +859,7 @@
           </div>
         </div>
         <div class="col-lg-4">
-          <h3 class="bg-dark text-white text-center">Politics</h3>
+          <h3 class="bg-dark text-white text-center mt-5">Politics</h3>
           <div class="text-on-top mb-4">
             <a class="news-link" href="#"><img src="img/sheikh-hasina-parliament.jpg" class="img-fluid">
               <div class="bottom-left mb-0 p-3 w-100">
